spade-tests/src/snapshots/spade_tests__ports_integration__wires_can_not_be_passed_as_generics.snap
---
source: spade-tests/src/ports_integration.rs
---
entity identity<T>(x: T) -> T {x}

entity x(p: &bool) -> &bool {
    inst identity(p)
}


error: Generic types cannot be ports
  ┌─ testinput:4:5
  │
4 │     inst identity(p)
  │     ^^^^^^^^^^^^^^^^ Parameter T is &bool which is a port type


